--- a/GetProbabilitesandVM.ipynb
+++ b/GetProbabilitesandVM.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,9 +95,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       None\n",
+       "1       None\n",
+       "2       None\n",
+       "3       None\n",
+       "4       None\n",
+       "5       None\n",
+       "6       None\n",
+       "7       None\n",
+       "8       None\n",
+       "9       None\n",
+       "10      None\n",
+       "11      None\n",
+       "12      None\n",
+       "13      None\n",
+       "14      None\n",
+       "15      None\n",
+       "16      None\n",
+       "17      None\n",
+       "18      None\n",
+       "19      None\n",
+       "20      None\n",
+       "21      None\n",
+       "22      None\n",
+       "23      None\n",
+       "24      None\n",
+       "25      None\n",
+       "26      None\n",
+       "27      None\n",
+       "28      None\n",
+       "29      None\n",
+       "        ... \n",
+       "1970    None\n",
+       "1971    None\n",
+       "1972    None\n",
+       "1973    None\n",
+       "1974    None\n",
+       "1975    None\n",
+       "1976    None\n",
+       "1977    None\n",
+       "1978    None\n",
+       "1979    None\n",
+       "1980    None\n",
+       "1981    None\n",
+       "1982    None\n",
+       "1983    None\n",
+       "1984    None\n",
+       "1985    None\n",
+       "1986    None\n",
+       "1987    None\n",
+       "1988    None\n",
+       "1989    None\n",
+       "1990    None\n",
+       "1991    None\n",
+       "1992    None\n",
+       "1993    None\n",
+       "1994    None\n",
+       "1995    None\n",
+       "1996    None\n",
+       "1997    None\n",
+       "1998    None\n",
+       "1999    None\n",
+       "Length: 2000, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "#get the probabilies into unigramsDict and bigramsDict\n",
@@ -106,9 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6120\n",
+      "60028\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(unigramDict))\n",
     "print(len(bigramDict))"
@@ -230,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,16 +347,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       None\n",
+       "1       None\n",
+       "2       None\n",
+       "3       None\n",
+       "4       None\n",
+       "5       None\n",
+       "6       None\n",
+       "7       None\n",
+       "8       None\n",
+       "9       None\n",
+       "10      None\n",
+       "11      None\n",
+       "12      None\n",
+       "13      None\n",
+       "14      None\n",
+       "15      None\n",
+       "16      None\n",
+       "17      None\n",
+       "18      None\n",
+       "19      None\n",
+       "20      None\n",
+       "21      None\n",
+       "22      None\n",
+       "23      None\n",
+       "24      None\n",
+       "25      None\n",
+       "26      None\n",
+       "27      None\n",
+       "28      None\n",
+       "29      None\n",
+       "        ... \n",
+       "1970    None\n",
+       "1971    None\n",
+       "1972    None\n",
+       "1973    None\n",
+       "1974    None\n",
+       "1975    None\n",
+       "1976    None\n",
+       "1977    None\n",
+       "1978    None\n",
+       "1979    None\n",
+       "1980    None\n",
+       "1981    None\n",
+       "1982    None\n",
+       "1983    None\n",
+       "1984    None\n",
+       "1985    None\n",
+       "1986    None\n",
+       "1987    None\n",
+       "1988    None\n",
+       "1989    None\n",
+       "1990    None\n",
+       "1991    None\n",
+       "1992    None\n",
+       "1993    None\n",
+       "1994    None\n",
+       "1995    None\n",
+       "1996    None\n",
+       "1997    None\n",
+       "1998    None\n",
+       "1999    None\n",
+       "Length: 2000, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.apply(makeInvertedIndex, axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,6 +466,8 @@
     "        if IDF < 0:\n",
     "            print(eachWord)\n",
     "            \n",
+    "        rowVector[eachWord] = TF*IDF\n",
+    "            \n",
     "        \n",
     "    if score >= 4:\n",
     "        rowVector[\"<label>\"] = \"good\"\n",
@@ -326,9 +481,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       None\n",
+       "1       None\n",
+       "2       None\n",
+       "3       None\n",
+       "4       None\n",
+       "5       None\n",
+       "6       None\n",
+       "7       None\n",
+       "8       None\n",
+       "9       None\n",
+       "10      None\n",
+       "11      None\n",
+       "12      None\n",
+       "13      None\n",
+       "14      None\n",
+       "15      None\n",
+       "16      None\n",
+       "17      None\n",
+       "18      None\n",
+       "19      None\n",
+       "20      None\n",
+       "21      None\n",
+       "22      None\n",
+       "23      None\n",
+       "24      None\n",
+       "25      None\n",
+       "26      None\n",
+       "27      None\n",
+       "28      None\n",
+       "29      None\n",
+       "        ... \n",
+       "1970    None\n",
+       "1971    None\n",
+       "1972    None\n",
+       "1973    None\n",
+       "1974    None\n",
+       "1975    None\n",
+       "1976    None\n",
+       "1977    None\n",
+       "1978    None\n",
+       "1979    None\n",
+       "1980    None\n",
+       "1981    None\n",
+       "1982    None\n",
+       "1983    None\n",
+       "1984    None\n",
+       "1985    None\n",
+       "1986    None\n",
+       "1987    None\n",
+       "1988    None\n",
+       "1989    None\n",
+       "1990    None\n",
+       "1991    None\n",
+       "1992    None\n",
+       "1993    None\n",
+       "1994    None\n",
+       "1995    None\n",
+       "1996    None\n",
+       "1997    None\n",
+       "1998    None\n",
+       "1999    None\n",
+       "Length: 2000, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "data.apply(getTFIDFReviewVectors, axis = 1)"
@@ -343,11 +570,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pd.DataFrame(TFIDFVM).to_csv(\"UniTFIDFModel.csv\", index = False)"
+    "pd.DataFrame(TFIDFVM).to_csv(\"UniTFIDFModel.csv\", index = False)"
    ]
   },
   {
@@ -363,18 +590,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
   }
  },
  "nbformat": 4,
